--- a/administrador/static/css/listar_pacientes_administrador.css
+++ b/administrador/static/css/listar_pacientes_administrador.css
@@ -26,39 +26,48 @@
 }
 
 /* Formulario de búsqueda */
-.busqueda-form {
+.search-container {
     display: flex;
-    align-items: center;
+    width: 70%;
 }
 
-.busqueda-input {
-    width: 100%;
-    position: relative;
+.search-icon {
+    position: flex;
+    justify-content: flex-end;
+    width: 20px; 
+    height: 20px;
+    margin-left: -30px;
+    margin-top: 8px;
 }
-
-/* Ajustar el tamaño y color de la barra de búsqueda */
-.busqueda-input input[type="text"] {
-    width: 450px;
-    height: 35px;
-    border: 2px solid #d9d9d9;
-    border-radius: 0px;
-    padding: 5px 10px;
-    outline: none;
-    color: black;
-    background-color: #f9f9f9;
+/* Estilos para la barra de búsqueda */
+.search-bar {
+    display: flex;
+    padding: 8px;
     font-size: 16px;
+    background-color: #D9D9D9;
+    border: 0.5px solid rgb(165, 165, 165);
+    border-radius: 5px;
+    width: 500px;
 }
+
+.search-bar:focus {
+    outline: none;
+    border-color: black;
+}
+
+/* Estilos para el buscadoe */
 .clear-button {
     display: flex;
     gap: 5px;
     background-color: #f5554a;
     color: white;
     border: none;
-    padding: 8px 15px;
+    padding: 8px 10px;
     border-radius: 5px;
     cursor: pointer;
     margin-left: 20px;
     height: auto;
+    text-wrap: nowrap;  
 }
 
 .clear-button:hover {
