Refactorización de buscadores para que funcionen correctamente y tengan los mismos estilos en todas las plantillas, se agrego la función de filtrado en todas los listados

--- a/recepcionista/static/css/listar_pacientes_recepcionista.css
+++ b/recepcionista/static/css/listar_pacientes_recepcionista.css
@@ -109,17 +109,77 @@
     padding: 0 10px 0 10px;
 }
 
-/* Botón de filtro */
+/* Estilos del botón de filtro */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
 .filtro-btn {
+    display: flex;
+    flex-direction: row;
     background-color: #373d58;
     color: white;
     border: none;
-    border-radius: 5px;
-    padding: 5px 15px;
+    border-radius: 7px;
+    padding: 5px 10px;
     cursor: pointer;
-    display: flex;
-    align-items: center;
-    gap: 5px;
+    gap: 10px;
+}
+
+.filtro-btn:hover {
+    background-color: #535c83;
+}
+
+.filtro-eliminar-container {
+    margin-left: 20px;
+}
+
+.filtro-eliminar-btn {
+    background-color: #f5554a;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+.filtro-eliminar-btn:hover {
+    background-color: #d32f2f;
+}
+
+/* Estilos del contenido del menú desplegable (oculto por defecto) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    border: 1.5px solid black;
+    border-radius: 7px;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    padding: 0; /* Asegúrate de que no haya padding adicional */
+    right: 0;
+}
+
+/* Agregar este estilo para eliminar los puntos de la lista */
+.dropdown-content li {
+    list-style-type: none; /* Elimina los puntos de la lista */
+    margin: 0; /* Elimina el margin por defecto */
+}
+
+/* Estilos de los enlaces dentro del menú */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    display: block;
+    text-decoration: none; /* Asegúrate de que no haya subrayado */
+}
+
+/* Cambiar el color de fondo de los enlaces al pasar el cursor */
+.dropdown-content a:hover {
+    background-color: #D9D9D9;
 }
 
 /* Estilo para los filtros de Activos/Inactivos */
@@ -267,6 +327,14 @@ input[type="checkbox"] {
 
 .boton-confirmar:hover {
     background-color: #008F85;
+}
+
+/* Círcuos Verde y Amarillo */
+.img-estado{
+    width: 15px;
+    height: 15px;
+    padding-top: 3px;
+    margin-left: 10px;
 }
 
 /* Estilos de paginación */
