--- a/ortesisWeb/templates/administrador_base.html
+++ b/ortesisWeb/templates/administrador_base.html
@@ -42,7 +42,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="{% url 'gestion_terapeutas' %}" class="{% if request.path == '/terapeutas/' %}active{% endif %}">
+                    <a href="{% url 'listar_terapeutas_activos' %}" class="{% if request.path == '/terapeutas/' %}active{% endif %}">
                             <img src="{% static 'icons/therapist.svg' %}" alt="Listado Terapeutas">
                             Terapeutas
                     </a>
